--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
   <nav>
-    <a href="/super-wars-project/main.html" aria-current="page">WebPage</a>
-    <a href="/super-wars-project/SpecRunner.html">TestPage</a>
+    <a href="main.html" aria-current="page">WebPage</a>
+    <a href="SpecRunner.html">TestPage</a>
   </nav>
   <main>
     <h1>Home page</h1>
